--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ header{
     padding-top: 100px;
 }
 .w3-content{
-    background: #e9eef1;
+    background: red;
     margin-bottom: 45px;
     color: #000;
    
